# RIPDPI

./: .actrc  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  COMPOSE-AUDIT-REPORT.md  COMPOSE-DESIGN-SYSTEM-AUDIT.md  DESIGN.md  README-ru.md  README.md  ROADMAP-CLEANUP.md  ROADMAP-architecture-refactor.md  ROADMAP-bypass-modernization.md  ROADMAP-bypass-techniques.md  ROADMAP-ui-ux.md  ROADMAP.md  SECURITY.md  TODO.md  build.gradle.kts  gradle.properties  justfile  lefthook.yml  lint.xml  renovate.json  settings.gradle.kts  zip_repository_ignore.md
native/rust/: Cargo.toml  clippy.toml  deny.toml  mutants.toml  rust-toolchain.toml
native/rust/.cargo/: config.toml
native/rust/.config/: nextest.toml
native/rust/crates/android-support/: Cargo.toml
native/rust/crates/android-support/src/: bounded_heap.rs  lib.rs  sync.rs
native/rust/crates/android-support/tests/: loom_handle_registry.rs
native/rust/crates/golden-test-support/: Cargo.toml
native/rust/crates/golden-test-support/src/: lib.rs
native/rust/crates/hs5t-android/: Cargo.toml
native/rust/crates/hs5t-android/src/: config.rs  lib.rs  session.rs  telemetry.rs
native/rust/crates/hs5t-android/tests/: linux_tun_e2e.rs  linux_tun_soak.rs
native/rust/crates/local-network-fixture/: Cargo.toml
native/rust/crates/local-network-fixture/src/: control.rs  dns.rs  echo.rs  event.rs  fault.rs  http.rs  lib.rs  main.rs  socks.rs  types.rs  util.rs
native/rust/crates/native-soak-support/: Cargo.toml
native/rust/crates/native-soak-support/src/: lib.rs
native/rust/crates/ripdpi-android/: Cargo.toml
native/rust/crates/ripdpi-android/proptest-regressions/: config.txt
native/rust/crates/ripdpi-android/src/: config.rs  diagnostics.rs  errors.rs  ffi.rs  lib.rs  owned_tls_http.rs  platform_tls.rs  proxy.rs  support.rs  telemetry.rs  vpn_protect.rs
native/rust/crates/ripdpi-apps-script-core/: Cargo.toml
native/rust/crates/ripdpi-apps-script-core/src/: config.rs  domain_fronter.rs  lib.rs  mitm.rs  proxy.rs  socks5.rs  telemetry.rs
native/rust/crates/ripdpi-bench/: Cargo.toml
native/rust/crates/ripdpi-bench/benches/: config_parse.rs  relay_connect_setup.rs  relay_throughput.rs  runtime_control_snapshot.rs  runtime_lock_contention.rs
native/rust/crates/ripdpi-bench/src/: lib.rs
native/rust/crates/ripdpi-cli/: Cargo.toml  README.md
native/rust/crates/ripdpi-cli/src/: main.rs  telemetry.rs
native/rust/crates/ripdpi-cli/tests/: packet_smoke.rs
native/rust/crates/ripdpi-cloudflare-origin/: Cargo.toml
native/rust/crates/ripdpi-cloudflare-origin/src/: main.rs
native/rust/crates/ripdpi-collections/: Cargo.toml
native/rust/crates/ripdpi-collections/src/: enum_map.rs  lib.rs
native/rust/crates/ripdpi-config/: Cargo.toml
native/rust/crates/ripdpi-config/src/: cache.rs  constants.rs  error.rs  lib.rs  model.rs
native/rust/crates/ripdpi-desync/: Cargo.toml
native/rust/crates/ripdpi-desync-runtime/: Cargo.toml
native/rust/crates/ripdpi-desync-runtime/src/: lib.rs  platform.rs  tcp_lowering.rs
native/rust/crates/ripdpi-desync/src/: client_hello_offsets.rs  fake.rs  first_flight_ir.rs  lib.rs  offset.rs  plan_tcp.rs  plan_udp.rs  proto.rs  tests.rs  tls_prelude.rs  types.rs
native/rust/crates/ripdpi-dns-resolver/: Cargo.toml
native/rust/crates/ripdpi-dns-resolver/src/: dnscrypt.rs  doh_pipeline.rs  health.rs  hickory_backend.rs  https_service_binding.rs  lib.rs  pool.rs  resolver.rs  tests.rs  transport.rs  types.rs
native/rust/crates/ripdpi-failure-classifier/: Cargo.toml  blockpage_fingerprints.csv
native/rust/crates/ripdpi-failure-classifier/src/: block_detection.rs  field_classifier.rs  lib.rs
native/rust/crates/ripdpi-hysteria2/: Cargo.toml
native/rust/crates/ripdpi-hysteria2/src/: lib.rs
native/rust/crates/ripdpi-io-uring/: Cargo.toml
native/rust/crates/ripdpi-io-uring/benches/: io_uring_acceptance.rs
native/rust/crates/ripdpi-io-uring/src/: bufpool.rs  lib.rs  probe.rs  ring.rs  tun.rs
native/rust/crates/ripdpi-ipfrag/: Cargo.toml
native/rust/crates/ripdpi-ipfrag/src/: lib.rs
native/rust/crates/ripdpi-masque/: Cargo.toml
native/rust/crates/ripdpi-masque/src/: auth.rs  cloudflare.rs  config.rs  h2_fallback.rs  (+2 more)
native/rust/crates/ripdpi-monitor/: Cargo.toml  adaptive-tuning-v1.json
native/rust/crates/ripdpi-naiveproxy/: Cargo.toml
native/rust/crates/ripdpi-native-protect/: Cargo.toml
native/rust/crates/ripdpi-packets/: Cargo.toml
native/rust/crates/ripdpi-privileged-ops/: Cargo.toml
native/rust/crates/ripdpi-proxy-config/: Cargo.toml
native/rust/crates/ripdpi-relay-android/: Cargo.toml
native/rust/crates/ripdpi-relay-core/: Cargo.toml
native/rust/crates/ripdpi-relay-mux/: Cargo.toml
native/rust/crates/ripdpi-root-helper/: Cargo.toml
native/rust/crates/ripdpi-root-helper-protocol/: Cargo.toml
native/rust/crates/ripdpi-runtime/: Cargo.toml  adaptive-tuning-v1.json
native/rust/crates/ripdpi-session/: Cargo.toml
native/rust/crates/ripdpi-shadowtls/: Cargo.toml
native/rust/crates/ripdpi-telemetry/: Cargo.toml
native/rust/crates/ripdpi-tls-profiles/: Cargo.toml
native/rust/crates/ripdpi-tuic/: Cargo.toml
native/rust/crates/ripdpi-tun-driver/: Cargo.toml
native/rust/crates/ripdpi-tunnel-android/: Cargo.toml
native/rust/crates/ripdpi-tunnel-config/: Cargo.toml
native/rust/crates/ripdpi-tunnel-core/: Cargo.toml
native/rust/crates/ripdpi-vless/: Cargo.toml
native/rust/crates/ripdpi-warp-android/: Cargo.toml
native/rust/crates/ripdpi-warp-core/: Cargo.toml
native/rust/crates/ripdpi-ws-tunnel/: Cargo.toml
native/rust/crates/ripdpi-xhttp/: Cargo.toml
native/rust/docs/audits/: etherparse-audit.md
native/rust/fuzz/: Cargo.toml  README.md
native/rust/fuzz/fuzz_targets/: client_hello_offsets.rs  common.rs  config_offset_expr.rs  dns_https_service_binding.rs  dns_response_answers.rs  failure_field_cache.rs  failure_http_response.rs  monitor_dns_response.rs  monitor_http_response.rs  packets_parse.rs  packets_tls_quic.rs  proxy_config_json.rs  session_request_parse.rs  tunnel_config_yaml.rs  vless_request_header.rs
(+2352 files in other folders)
