[workspace]
resolver = "2"
members = [
    "crates/android-support",
    "crates/golden-test-support",
    "crates/ripdpi-dns-resolver",
    "crates/ripdpi-failure-classifier",
    "crates/ripdpi-hysteria2",
    "crates/local-network-fixture",
    "crates/native-soak-support",
    "crates/ripdpi-proxy-config",
    "crates/ripdpi-monitor",
    "crates/ripdpi-runtime",
    "crates/ripdpi-telemetry",
    "crates/ripdpi-native-protect",
    "crates/ripdpi-android",
    "crates/ripdpi-relay-core",
    "crates/ripdpi-relay-android",
    "crates/ripdpi-warp-core",
    "crates/ripdpi-warp-android",
    "crates/ripdpi-packets",
    "crates/ripdpi-ipfrag",
    "crates/ripdpi-session",
    "crates/ripdpi-ws-tunnel",
    "crates/ripdpi-config",
    "crates/ripdpi-desync",
    "crates/ripdpi-tunnel-config",
    "crates/ripdpi-tun-driver",
    "crates/ripdpi-tunnel-core",
    "crates/ripdpi-tunnel-android",
    "crates/ripdpi-cli",
    "crates/ripdpi-bench",
    "crates/ripdpi-io-uring",
    "crates/ripdpi-root-helper",
    "crates/ripdpi-relay-mux",
    "crates/ripdpi-vless",
    "crates/ripdpi-shadowtls",
    "crates/ripdpi-masque",
    "crates/ripdpi-tuic",
    "crates/ripdpi-naiveproxy",
    "crates/ripdpi-cloudflare-origin",
    "crates/ripdpi-tls-profiles",
    "crates/ripdpi-xhttp",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
android-support = { path = "crates/android-support" }
golden-test-support = { path = "crates/golden-test-support" }
local-network-fixture = { path = "crates/local-network-fixture" }
native-soak-support = { path = "crates/native-soak-support" }
ripdpi-dns-resolver = { path = "crates/ripdpi-dns-resolver" }
ripdpi-failure-classifier = { path = "crates/ripdpi-failure-classifier" }
ripdpi-hysteria2 = { path = "crates/ripdpi-hysteria2" }
ripdpi-proxy-config = { path = "crates/ripdpi-proxy-config" }
ripdpi-monitor = { path = "crates/ripdpi-monitor" }
ripdpi-runtime = { path = "crates/ripdpi-runtime" }
ripdpi-telemetry = { path = "crates/ripdpi-telemetry" }
ripdpi-native-protect = { path = "crates/ripdpi-native-protect" }
ripdpi-relay-core = { path = "crates/ripdpi-relay-core" }
ripdpi-relay-mux = { path = "crates/ripdpi-relay-mux" }
ripdpi-warp-core = { path = "crates/ripdpi-warp-core" }
ripdpi-packets = { path = "crates/ripdpi-packets" }
ripdpi-ipfrag = { path = "crates/ripdpi-ipfrag" }
ripdpi-session = { path = "crates/ripdpi-session" }
ripdpi-ws-tunnel = { path = "crates/ripdpi-ws-tunnel" }
ripdpi-config = { path = "crates/ripdpi-config" }
ripdpi-desync = { path = "crates/ripdpi-desync" }
ripdpi-cli = { path = "crates/ripdpi-cli" }
ripdpi-io-uring = { path = "crates/ripdpi-io-uring" }
ripdpi-vless = { path = "crates/ripdpi-vless" }
ripdpi-shadowtls = { path = "crates/ripdpi-shadowtls" }
ripdpi-masque = { path = "crates/ripdpi-masque" }
ripdpi-tuic = { path = "crates/ripdpi-tuic" }
ripdpi-tls-profiles = { path = "crates/ripdpi-tls-profiles" }
ripdpi-xhttp = { path = "crates/ripdpi-xhttp" }
ripdpi-naiveproxy = { path = "crates/ripdpi-naiveproxy" }
ripdpi-cloudflare-origin = { path = "crates/ripdpi-cloudflare-origin" }
criterion = { version = "0.8", features = ["html_reports"] }

ripdpi-tun-driver = { path = "crates/ripdpi-tun-driver" }
ripdpi-tunnel-config = { path = "crates/ripdpi-tunnel-config" }
ripdpi-tunnel-core = { path = "crates/ripdpi-tunnel-core" }

hdrhistogram = "7"
aes = "0.8"
arc-swap = "1"
android_logger = "0.15"
anyhow = "1"
crypto_box = { version = "0.9", features = ["chacha20"] }
etherparse = "0.19"
fast-socks5 = "1.0"
hex = "0.4"
jni = "0.22"
libc = "0.2"
log = "0.4"
loom = "0.7"
metrics = "0.24"
lru = "0.16"
mio = { version = "1.2", features = ["net", "os-poll"] }
nix = { version = "0.31", features = ["net", "ioctl", "fs", "mman", "signal", "process", "uio", "zerocopy"] }
once_cell = "1"
quinn = { version = "0.11", default-features = false, features = ["rustls", "ring", "runtime-tokio"] }
ring = "0.17"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3"
serde_yaml_ng = "0.10"
socket2 = "0.6"
proptest = "1"
rcgen = "0.14"
rustls = { version = "0.23.38", default-features = false, features = ["ring", "std", "tls12", "aws-lc-rs"] }
hickory-proto = { version = "0.25", default-features = false, features = ["std"] }
hickory-resolver = { version = "0.25", default-features = false, features = ["tls-ring", "https-ring", "tokio", "webpki-roots"] }
smoltcp = { version = "0.13", default-features = false, features = ["std", "async", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }
thiserror = "2"
tokio = { version = "1", default-features = false }
tun-rs = { version = "2.8", features = ["async"] }
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1"
md5 = "0.8"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
url = "2"
boring = "5"
tokio-boring = "5"
webpki-roots = "1.0"
io-uring = "=0.7.11"
flume = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
hyper = { version = "1", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"
http = "1"
base64 = "0.22"
http-body-util = "0.1"
blake2 = "0.10"
futures = "0.3"
h3-datagram = "0.0.2"
rand = "0.9"
sha2 = "0.10"

[workspace.lints.clippy]
# Correctness & suspicious (errors)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Style & complexity (warnings)
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Cherry-picked pedantic lints
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
map_unwrap_or = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
manual_let_else = "warn"
trivially_copy_pass_by_ref = "warn"
unused_self = "warn"
default_trait_access = "warn"
explicit_into_iter_loop = "warn"
match_wildcard_for_single_variants = "warn"

# JNI/FFI allowances
missing_safety_doc = "allow"
not_unsafe_ptr_arg_deref = "allow"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"
codegen-units = 1

[profile.bench]
debug = false
lto = "thin"

[profile.android-jni]
inherits = "release"
opt-level = "z"
panic = "unwind"

[profile.android-jni-dev]
inherits = "dev"
panic = "unwind"
opt-level = 1
debug = "line-tables-only"

[patch.crates-io]
boring-sys = { path = "vendor/boring-sys" }
