[workspace]

[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ripdpi-failure-classifier = { path = "../crates/ripdpi-failure-classifier" }
ripdpi-dns-resolver = { path = "../crates/ripdpi-dns-resolver" }
ripdpi-monitor = { path = "../crates/ripdpi-monitor" }
ripdpi-packets = { path = "../crates/ripdpi-packets" }
ripdpi-proxy-config = { path = "../crates/ripdpi-proxy-config" }
ripdpi-session = { path = "../crates/ripdpi-session" }
ripdpi-tunnel-config = { path = "../crates/ripdpi-tunnel-config" }
ripdpi-vless = { path = "../crates/ripdpi-vless" }

[[bin]]
name = "packets_parse"
path = "fuzz_targets/packets_parse.rs"
test = false
doc = false

[[bin]]
name = "failure_http_response"
path = "fuzz_targets/failure_http_response.rs"
test = false
doc = false

[[bin]]
name = "failure_field_cache"
path = "fuzz_targets/failure_field_cache.rs"
test = false
doc = false

[[bin]]
name = "vless_request_header"
path = "fuzz_targets/vless_request_header.rs"
test = false
doc = false

[[bin]]
name = "proxy_config_json"
path = "fuzz_targets/proxy_config_json.rs"
test = false
doc = false

[[bin]]
name = "tunnel_config_yaml"
path = "fuzz_targets/tunnel_config_yaml.rs"
test = false
doc = false

[[bin]]
name = "session_request_parse"
path = "fuzz_targets/session_request_parse.rs"
test = false
doc = false

[[bin]]
name = "dns_response_answers"
path = "fuzz_targets/dns_response_answers.rs"
test = false
doc = false

[[bin]]
name = "monitor_dns_response"
path = "fuzz_targets/monitor_dns_response.rs"
test = false
doc = false
