[package]
name = "android-support"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
android_logger = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
golden-test-support = { workspace = true }
