[package]
name = "android-support"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
android_logger = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
loom = { workspace = true, optional = true }
nix = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
golden-test-support = { workspace = true }
jni = { workspace = true, features = ["invocation"] }
serde_json = { workspace = true }

[features]
loom = ["dep:loom"]
