# Test-support only. Not shipped in APK, not part of public API.
[package]
name = "golden-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
similar = { workspace = true }
