[package]
name = "hs5t-android"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
android-support = { workspace = true }
hs5t-config = { workspace = true }
hs5t-core = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
golden-test-support = { workspace = true }
libc = { workspace = true }
local-network-fixture = { workspace = true }
native-soak-support = { workspace = true }
proptest = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
hs5t-tunnel = { path = "../../third_party/hev-socks5-tunnel/crates/hs5t-tunnel" }
