# Test-support only. Not shipped in APK, not part of public API.
[package]
name = "native-soak-support"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
