[package]
name = "ripdpi-android"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
android-support = { workspace = true }
ciadpi-config = { workspace = true }
ciadpi-desync = { workspace = true }
ciadpi-packets = { workspace = true }
ciadpi-session = { workspace = true }
jni = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
ripdpi-proxy-config = { workspace = true }
ripdpi-monitor = { workspace = true }
ripdpi-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
golden-test-support = { workspace = true }
proptest = { workspace = true }
