[package]
name = "ripdpi-android"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
android-support = { workspace = true }
arc-swap = { workspace = true }
ripdpi-config = { workspace = true }
ripdpi-desync = { workspace = true }
ripdpi-packets = { workspace = true }
ripdpi-session = { workspace = true }
jni = { workspace = true }
libc = { workspace = true }
loom = { workspace = true, optional = true }
nix = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
ripdpi-failure-classifier = { workspace = true }
ripdpi-proxy-config = { workspace = true }
ripdpi-monitor = { workspace = true }
ripdpi-runtime = { workspace = true }
ripdpi-telemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
golden-test-support = { workspace = true }
jni = { workspace = true, features = ["invocation"] }
proptest = { workspace = true }

[features]
loom = ["dep:loom"]
