[package]
name = "ripdpi-apps-script-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
flate2.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls.workspace = true
tracing.workspace = true
webpki-roots.workspace = true

[lints]
workspace = true
