[package]
name = "ripdpi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ripdpi"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ripdpi-config = { workspace = true }
ripdpi-runtime = { workspace = true }
ripdpi-telemetry = { workspace = true }
ripdpi-failure-classifier = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
loom = ["ripdpi-runtime/loom"]

[dev-dependencies]
aes = { workspace = true }
libc = { workspace = true }
local-network-fixture = { workspace = true }
nix = { workspace = true }
ring = { workspace = true }
ripdpi-packets = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
