[package]
name = "ripdpi-desync"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ripdpi-config = { workspace = true }
ripdpi-packets = { workspace = true }

[dev-dependencies]
aes = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
serde_json = "1.0"
sha2 = { workspace = true }
