[package]
name = "ripdpi-desync"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rand = { workspace = true }
ripdpi-config = { workspace = true }
ripdpi-ipfrag = { workspace = true }
ripdpi-packets = { workspace = true }
ripdpi-tls-profiles = { workspace = true }
ring = { workspace = true }

[dev-dependencies]
aes = { workspace = true }
golden-test-support = { workspace = true }
serde_json = "1.0"
