[package]
name = "ripdpi-dns-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
crypto_box = { workspace = true }
hex = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true, optional = true }
lru = { workspace = true }
once_cell = { workspace = true }
ring = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
url = { workspace = true }
webpki-roots = { workspace = true }

[features]
hickory-backend = ["dep:hickory-resolver"]

[dev-dependencies]
local-network-fixture = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
