[package]
name = "ripdpi-failure-classifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
ripdpi-packets = { path = "../ripdpi-packets" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
