[package]
name = "ripdpi-io-uring"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
io-uring = { workspace = true }

[dependencies]
libc = { workspace = true }
log = { workspace = true }
flume = { workspace = true }

[dev-dependencies]
