[package]
name = "ripdpi-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
url = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
golden-test-support = { workspace = true }
local-network-fixture = { workspace = true }
native-soak-support = { workspace = true }
rcgen = { workspace = true }
