[package]
name = "ripdpi-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
android-support = { workspace = true }
log = { workspace = true }
ripdpi-config = { workspace = true }
ripdpi-packets = { workspace = true }
ripdpi-dns-resolver = { workspace = true }
ripdpi-failure-classifier = { workspace = true }
ripdpi-proxy-config = { workspace = true }
ripdpi-runtime = { workspace = true }
ripdpi-ws-tunnel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
hickory-resolver = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
loom = { workspace = true, optional = true }

[dev-dependencies]
golden-test-support = { workspace = true }
local-network-fixture = { workspace = true }
native-soak-support = { workspace = true }
rcgen = { workspace = true }

[features]
hickory = ["dep:hickory-resolver", "dep:tokio"]
loom = ["dep:loom"]
quic-native = ["dep:quinn", "dep:tokio"]
