[package]
name = "ripdpi-naiveproxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
rustls.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-rustls.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
rcgen.workspace = true

[lints]
workspace = true
