[package]
name = "ripdpi-packets"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aes = { workspace = true }
nom = { version = "7", default-features = false, features = ["alloc"] }
ring = { workspace = true }

[dev-dependencies]
proptest = "1.6"
serde_json = "1.0"
tls-parser = "0.12"
