[package]
name = "ripdpi-packets"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
aes = { workspace = true }
nom = { version = "8", default-features = false, features = ["alloc"] }
ripdpi-collections = { workspace = true }
ring = { workspace = true }

[dev-dependencies]
proptest = "1.11"
serde_json = "1.0"
tls-parser = "0.12"
