[package]
name = "ripdpi-privileged-ops"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
etherparse = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
ripdpi-config = { workspace = true }
ripdpi-desync = { workspace = true }
ripdpi-ipfrag = { workspace = true }
serde = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
tracing = { workspace = true }
