[package]
name = "ripdpi-proxy-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ripdpi-config = { workspace = true }
ripdpi-packets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
golden-test-support = { workspace = true }
proptest = { workspace = true }
