[package]
name = "ripdpi-relay-android"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
android-support.workspace = true
jni.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
