[package]
name = "ripdpi-relay-android"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
android-support.workspace = true
jni.workspace = true
once_cell.workspace = true
rustls.workspace = true
serde_json.workspace = true
ripdpi-apps-script-core.workspace = true
ripdpi-relay-core.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
