[package]
name = "ripdpi-relay-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hysteria2 = "0.1.6"
serde = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
