[package]
name = "ripdpi-relay-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ripdpi-hysteria2 = { workspace = true }
ripdpi-vless = { workspace = true }
ripdpi-masque = { workspace = true }
ripdpi-xhttp = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }

[lints]
workspace = true
